objects/LAT_PriceCalculationProcessingVersion__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This CS handles the processing version for the Price Calculation by Country</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Version__c</fullName>
        <label>Processing Version</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LAT Price Calculation Processing Version</label>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Processing_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
</CustomObject>